instruments/AIOUSB/DLL/CoreExports.pas


        I := Pos('PID_', UpperCase(String(ThisLine)));
        if I = 0 then Continue;
        PIDStr := Copy(ThisLine, I + 4, 4);
        {$IFDEF Debug}
          if not IsHex(PIDStr) then AnsiMessageBox('Device PID ' + PIDStr + ' not hex!', 'AIOUSB_UploadD15LoFirmwaresByPID', MB_ICONEXCLAMATION);
        {$ENDIF}
        if not IsHex(PIDStr) then Continue;
        ThisPID := HexToInt(PIDStr) and $7FFF;
        iFirmware := High(PFD);
        while (iFirmware >= 0) and (PFD[iFirmware].PID <> ThisPID) do Dec(iFirmware);
        {$IFDEF Debug}
          if iFirmware < 0 then AnsiMessageBox('Device PID ' + AnsiString(IntToHex(ThisPID, 4)) + ' not recognized!', 'AIOUSB_UploadD15LoFirmwaresByPID', MB_ICONEXCLAMATION);
        {$ENDIF}
        if iFirmware < 0 then Continue; //PID not recognized, don't bother.

        hCyFile := CreateFileA(PAnsiChar(ThisLine), GENERIC_WRITE or GENERIC_READ, FILE_SHARE_WRITE or FILE_SHARE_READ, nil, OPEN_EXISTING, FILE_FLAG_OVERLAPPED, 0);
        ThisLine := '';
        if hCyFile = INVALID_HANDLE_VALUE then hCyFile := 0;
        {$IFDEF Debug}
          if hCyFile = 0 then AnsiMessageBox('Unable to open CyUSB device!', 'AIOUSB_UploadD15LoFirmwaresByPID', MB_ICONEXCLAMATION);
        {$ENDIF}
        if hCyFile = 0 then Continue;

        //Transfer the hex file.

        //Put CPU into reset.
        Status := _hCy_GenericVendorWriteStr(hCyFile, $A0, $E600, 0, #$01);
        if Status = ERROR_SUCCESS then begin
          //Transfer each line.
          for iLine := 0 to High(PFD[iFirmware].FirmContent) do
            with PFD[iFirmware].FirmContent[iLine] do
              _hCy_GenericVendorWriteStr(hCyFile, $A0, Addr, 0, Data)
          ;
          //take CPU out of reset.
          _hCy_GenericVendorWriteStr(hCyFile, $A0, $E600, 0, #$00);
          Inc(Result);
        end
        else begin
          {$IFDEF Debug}
            AnsiMessageBox('Error ' + AnsiString(IntToStr(Status)) + ' putting CPU into reset!', 'AIOUSB_UploadD15LoFirmwaresByPID', MB_ICONEXCLAMATION);
          {$ENDIF}
        end;

        CloseHandle(hCyFile);
      end;
      SetLastError(ERROR_SUCCESS);
    except
      SetLastError(ERROR_INTERNAL_ERROR);
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DEB_BufTest(DeviceIndex: LongWord; VR: Byte; VI: LongWord; pData: PByte; DataSize: LongWord): LongWord; cdecl;
var
  Data: AnsiString;

begin
  try
    LoadCyUSBLinks(D15LoClassGUID);

    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if not (USBDriverType in [dtCyUSB2, dtCyUSB3]) then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      try
        SetString(Data, PAnsiChar(pData), DataSize);
      except
        Result := ERROR_NOACCESS;
        Exit;
      end;

      Result := ERROR_NOT_SUPPORTED;
      //Result := _GenericVendorWrite(DeviceIndex, VR, VI, VI shr 16, DataSize, pData);
      //Result := _hCy_GenericVendorWriteStr(GetThreadHandleForDevice(DeviceIndex), VR, VI, VI shr 16, Data);
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function GetDeviceSerialNumber(DeviceIndex: LongWord; var pSerialNumber: Int64): LongWord; cdecl;
var
  L: LongWord;
  Content: Int64;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    L := SizeOf(Content);
    Result := GenericVendorRead(DeviceIndex, $A2, $1DF8, 0, L, @Content);

    if (Result = ERROR_SUCCESS) and (L = SizeOf(Content)) then begin
      if Content = 0 then Content := -1;
      pSerialNumber := Content;
      if Content = -1 then Result := ERROR_NOT_SUPPORTED;
    end
    else begin
      Result := GetMappedFailure(DeviceIndex);
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function GetDeviceUniqueStr(DeviceIndex: LongWord; pIIDSize: PLongWord; pIID: PAnsiChar): LongWord; cdecl;
var
  Content: Int64;

begin
  try
    Result := GetDeviceSerialNumber(DeviceIndex, Content);
    if Result <> ERROR_SUCCESS then Exit;

    Move(Content, pIID^, Min(SizeOf(Content), pIIDSize^));
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function OctDacFromFreq(var ClockHz: Double): Word;
var
  Octave, Offset: Integer;

begin
  if ClockHz = 0 then begin
    Result := 0;
    Exit;
  end;
  if ClockHz > 40000000 then ClockHz := 40000000;
  //if ClockHz > 66000000 then ClockHz := 66000000;
  Octave := Floor(3.322 * Log10(ClockHz / 1039));
  if Octave < 0 then begin //Don't bother with upper limit, we already covered it and then some above.
    Octave := 0;
    Offset := 0;
    Result := $0000;
  end
  else begin
    Offset := Round(2048 - (LDExp(2078, 10 + Octave)/ClockHz)); //Don't bother with limits, we covered that when calculating the octave.
    Result := (Octave shl 12) or (Offset shl 2);
    Result := MotorolaWord(Result);
  end;
  ClockHz := (2078 shl Octave) / (2 - Offset / 1024);
end;





function DACDirect(DeviceIndex: LongWord; Channel: Word; Value: Word): LongWord; cdecl;
var
  DACStreamData: LongWord;
  ClockHz: Double;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin

      if ImmDACs = 0 then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if (bDACStream or bDACDIOStream or bDACSlowWaveStream) and (bDACOpen or bDACClosing) then begin
        Result := ERROR_TOO_MANY_OPEN_FILES;
        Exit;
      end;

      if Channel >= ImmDACs then begin
        Result := ERROR_INVALID_ADDRESS;
        Exit;
      end;

      if bDACDIOStream then begin
        DACStreamData := Value * $00010001;
        ClockHz := DACDIOStreamImmHz;
        Result := DACOutputProcess(DeviceIndex, ClockHz, 2, @DACStreamData);
      end
      else begin
        Result := GenericVendorWrite(DeviceIndex, AUR_DAC_IMMEDIATE, Value, Channel, 0, nil);
      end;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACMultiDirect(DeviceIndex: LongWord; pDACData: PDACEntry; DACDataCount: LongWord): LongWord; cdecl;
var
  Content: AnsiString;
  pDE: PDACEntry;
  pDB, pMB: PByte;
  I, J: Integer;
  L: LongWord;
  DACStreamData: LongWord;
  ClockHz: Double;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if ImmDACs = 0 then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if (bDACStream or bDACDIOStream or bDACSlowWaveStream) and (bDACOpen or bDACClosing) then begin
        Result := ERROR_TOO_MANY_OPEN_FILES;
        Exit;
      end;

      if DACDataCount = 0 then Exit; //If length is zero, it's a nop

      pDE := pDACData;
      L := 0;
      for I := 0 to DACDataCount - 1 do begin
        if pDE.Channel > L then L := pDE.Channel;
        Inc(pDE);
      end;
      //L is now highest channel

      if L >= ImmDACs then begin
        Result := ERROR_INVALID_ADDRESS;
        Exit;
      end;

      if bDACDIOStream then begin
        pDE := pDACData;
        Inc(pDE, DACDataCount - 1);
        DACStreamData := pDE.Value * $00010001;
        ClockHz := DACDIOStreamImmHz;
        Result := DACOutputProcess(DeviceIndex, ClockHz, 2, @DACStreamData);
      end
      else begin
        L := (L div 8) + 1; //Number of blocks of 8 DACs

        Content := StringOfChar(AnsiChar(#0), L * 17);

        pDB := PByte(PAnsiChar(Content));
        pDE := pDACData;
        for I := 0 to DACDataCount - 1 do begin
          J := pDE.Channel;
          pMB := pDB;
          Inc(pMB, J * 2 + (J div 8) + 1);
          PWord(pMB)^ := pDE.Value;

          pMB := pDB;
          Inc(pMB, (J div 8) * 17);
          pMB^ := pMB^ or (1 shl (J and 7));

          Inc(pDE);
        end;

        Result := GenericVendorWrite(DeviceIndex, AUR_DAC_IMMEDIATE, 0, 0, Length(Content), PAnsiChar(Content));
      end;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACSetBoardRange(DeviceIndex: LongWord; RangeCode: LongWord): LongWord; cdecl;
var
  ConfigData: array[0..1] of Byte;
  DataSize: LongWord;
  DACData: Word;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    if Dev[DeviceIndex].bDACDIOStream then begin
      //Read the jumper.
      DataSize := 2;
      Result := GenericVendorRead(DeviceIndex, $B7, 0, 0, DataSize, @ConfigData[0]);
      if Result <> ERROR_SUCCESS then Exit;

      if ConfigData[0] >= 2 then begin
        if ConfigData[1] <> 0 then
          DACData := $8000 //Bipolar counts for zero volts.
        else
          DACData := $0000 //Unipolar counts for zero volts.
        ;
        Result := DACDirect(DeviceIndex, 0, DACData);
        if Result <> ERROR_SUCCESS then Exit;
      end;

      //Enable the reference.
      Result := GenericVendorWrite(DeviceIndex, $B7, 0, 0, 0, nil);
      Exit;
    end;

    if not Dev[DeviceIndex].bDACBoardRange then begin
      //`@ If the board has channel range, then channel range in a loop.
      Result := ERROR_BAD_TOKEN_TYPE;
      Exit;
    end;

    Result := GenericVendorWrite(DeviceIndex, AUR_DAC_RANGE, RangeCode, 0, 0, nil);
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function StringReplaceC(const S: AnsiString; const OldChar, NewChar: AnsiChar): AnsiString;
var
  I: Integer;

begin
  Result := S;
  for I := 1 to Length(Result) do
    if Result[I] = OldChar then
      Result[I] := NewChar
  ;
end;

function DACSetChannelCal(DeviceIndex: LongWord; Channel: LongWord; CalFileName: PAnsiChar): LongWord; cdecl;
var
  CalTable: array of Word;
  Suc: Boolean;
  L, L2: LongWord;
  hFil: THandle;
  InterBuf: AnsiString;
  I, J, K: Integer;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if (FlashSectors = 0) or not bDACChannelCal then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if Channel >= ImmDACs then begin
        Result := ERROR_INVALID_ADDRESS;
        Exit;
      end;

      if (CalFileName = ':1TO1:') or (CalFileName = ':NONE:') then begin
        Result := AIOUSB_FlashEraseSector(DeviceIndex, Channel * 2);
        if Result <> ERROR_SUCCESS then Exit;
        Result := AIOUSB_FlashEraseSector(DeviceIndex, Channel * 2 + 1);
        if Result <> ERROR_SUCCESS then Exit;

        Result := GenericVendorWrite(DeviceIndex, AUR_DEBUG_FLASH_1TO1, 0, Channel, 0, nil);
      end
      else begin

        hFil := CreateFileA(CalFileName, GENERIC_READ, FILE_SHARE_READ or FILE_SHARE_WRITE, nil, OPEN_EXISTING, 0, 0);
        if (hFil = 0) or (hFil = INVALID_HANDLE_VALUE) then begin
          Result := GetLastError;
          if Result = ERROR_SUCCESS then Result := ERROR_GEN_FAILURE;
          Exit;
        end;
        L := GetFileSize(hFil, nil);
        Result := GetLastError;
        if Result <> ERROR_SUCCESS then begin
          CloseHandle(hFil);
          Exit;
        end;
        L := Min(L, $08000000); //Cap for RAM reasons. Even a 0x-based file should be $80000 bytes.
        try
          SetString(InterBuf, nil, L + 1);
          InterBuf[L + 1] := #13; //Terminate for the read-out logic.
        except
          CloseHandle(hFil);
          Result := ERROR_OUTOFMEMORY;
          Exit;
        end;
        Suc := ReadFile(hFil, InterBuf[1], L, L2, nil);
        Result := GetLastError;
        if (Result = ERROR_SUCCESS) and not Suc then Result := ERROR_GEN_FAILURE;
        if (Result = ERROR_SUCCESS) and (L2 < L) then begin
          Result := GetLastError;
          if Result = ERROR_SUCCESS then Result := ERROR_GEN_FAILURE;
        end;
        CloseHandle(hFil);
        if Result <> ERROR_SUCCESS then Exit;
